---------------------------------------------------------------------------------------------------
Version: 3.1.3
Date: 31. 03. 2019
  Changes:
    - added support for Multiple Unit Train Control mod
---------------------------------------------------------------------------------------------------
Version: 3.1.2
Date: 29. 03. 2019
  Bugfixes:
    - fixed entities not being added in maintenance/bulldozer mode
    - fixed coal not being collected when removing stone rocks
---------------------------------------------------------------------------------------------------
Version: 3.1.1
Date: 28. 03. 2019
  Bugfixes:
    - fixed error with Multiple Unit Train Control mod
---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: 19. 03. 2019
  Changes:
    - added option to remove cliffs, requires cliff explosives (defaults to true)
    - added console commands to read and clear blueprints, create vertical and diagonal blueprints (you have to be in a FARL for them to work)
    - /farl_read_bp /farl_clear_bp /farl_vertical_bp /farl_diagonal_bp
  Bugfixes:
    - fixed migration error when FARL module was disabled
    - fixed error when deconstructing an active FARL
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 05. 03. 2019
  Bugfixes:
    - fixed tiles being replaced with grass in maintenance mode
    - fixed error when creating/saving a scenario
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 27. 02. 2019
  Changes:
    - Updated for Factorio 0.17
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 04. 06. 2018
  Changes:
    - Added mod setting to make red and green wires placed by FARL free (defaults to false)
  Bugfixes:
    - Fixed Dectorio landscape tiles being picked up by FARL